<resources>
    <string name="app_name" translatable="false">Go to Sleep</string>
    <string name="action_settings">Settings</string>
    <string name="app_intro">Intro</string>
    <string name="edit_bedtime">Edit Bedtime</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="channel_name">Bedtime Reminders</string>
    <string name="channel_description">Bedtime notifications remind you around your bedtime to go to sleep.</string>
    <string name="notification1">Time to sleep</string>
    <string name="notification2">Why are you still awake?</string>
    <string name="notification3">Are you seriously still on your phone?</string>
    <string name="notification4">You should be sleeping</string>
    <string name="notification5">You\'re gonna regret this</string>
    <string name="sleep_message">why aren\'t you sleeping?</string>
    <string name="enable_sleep_mode">Go to sleep</string>
    <string name="shortcut_short">Sleep Mode</string>
    <string name="shortcut_long">I\'m going to sleep</string>
    <string name="advertisement">Advertisement</string>
    <string name="request_feedback">Would you like to send some feedback?</string>
    <string name="no_thanks">No, thanks</string>
    <string name="ok_sure">Ok, sure</string>
    <string name="rating_request">How about rating the app then?</string>
    <string name="rating_prompt">Enjoying Go to Sleep?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_description">I created this open-source, mostly ad-free app not for money but because I saw a problem that needed solving. I encourage you to look at the source code of this app, available on my GitHub linked below. I would be thrilled if even one person compiled my code from scratch and tried to contribute to this project. Thank you for downloading Go to Sleep and I hope you have a beautiful sleep schedule from here on out!</string>
    <string name="dollar_1" translatable="false">$1</string>
    <string name="paypal" translatable="false">PayPal: paypal.me/CGerdemann</string>
    <string name="donate_desc">Help support my future open-source projects by giving me a few bucks. It goes a long way and I very much appreciate it!</string>
    <string name="dollar_3" translatable="false">$3</string>
    <string name="dollar_5" translatable="false">$5</string>
    <string name="google_pay" translatable="false">Google Pay: corvettecole@gmail.com</string>
    <string name="ethereum" translatable="false">Ethereum: 0x8eFF5600A23708EFa475Be2C18892c9c0C43373B</string>
    <string name="egg1">maybe there is a secret here</string>
    <string name="egg2">perhaps</string>
    <string name="egg3">getting warmer…</string>
    <string name="egg4">even warmer!</string>
    <string name="egg5">oops sorry you missed it you were clicking too fast</string>
    <string name="egg6">just kidding I guess</string>
    <string name="egg7">curiosity killed the cat</string>
    <string name="egg8">and satisfaction brought it back</string>
    <string name="egg9">you made it! Something in the app seems to have changed…</string>
    <string name="eggDisable1">you can turn it off if you click a bunch</string>
    <string name="eggDisable2">lame</string>
    <string name="eggDisable3">you are lame</string>
    <string name="eggDisable4">why do you hate me</string>
    <string name="eggDisable5">you hate fun</string>
    <string name="eggDisable6">don\'t be lame</string>
    <string name="eggDisable7">why are you the way you are</string>
    <string name="eggDisable8">wow</string>
    <string name="eggDisable9">welcome to the lamezone your lameness. egg disabled</string>
    <string name="aboutGitHub">View the GitHub</string>
    <string name="aboutRate">Rate the app</string>
    <string name="aboutSupport">Support me</string>
    <string name="aboutContact">Contact me</string>
    <string name="aboutContactSubject">Go to Sleep Feedback</string>
    <string name="aboutContactError">No email app available</string>
    <string name="aboutWebsite">Visit my website</string>
    <string name="aboutCredits">Credits</string>
    <string name="aboutPrivacy">Privacy Policy</string>
    <string name="aboutLicense">License</string>
    <string name="autoDnDToast">Enabled DnD… Go to sleep!</string>
    <string name="notifAction">I\'m going to sleep</string>
    <string name="notifTitleFirst">Time to head to bed.</string>
    <string name="notifTitleSingular">It is %d minute past your bedtime!</string>
    <string name="notifTitlePlural">It is %d minutes past your bedtime!</string>
    <string name="notifTitleFunky">%d</string>
    <string name="supportEthereum">Ethereum Address</string>
    <string name="supportEthereumCopied">Copied ethereum address to clipboard</string>
    <string name="supportGooglePay">Google Pay Address</string>
    <string name="supportGooglePayCopied">Copied Google Pay to clipboard</string>
    <string name="introTitle1">Welcome.</string>
    <string name="introDesc1">It\'s time to fix your sleep schedule</string>
    <string name="introTitle2">Remind yourself.</string>
    <string name="introDesc2">Set your bedtime and never lose track of time again</string>
    <string name="introTitle3">Motivate yourself.</string>
    <string name="introDesc3">Set custom sleep reminders</string>
    <string name="introTitle4">Let\'s do this.</string>
    <string name="introDesc4">Your new sleep schedule starts now</string>
    <string name="back_pressed">Press again to exit</string>
    <string name="sleepModeButtonToast">Set next bedtime notification to tomorrow</string>
    <string name="feedbackBodyText">Please explain your bug or feature suggestion thoroughly</string>
    <string name="countDownHourSingular">%d hour</string>
    <string name="countdownHourFunky">%d</string>
    <string name="countdownHourPlural">%d hours</string>
    <string name="countdownMinuteSingularFuture">%d minute until bedtime</string>
    <string name="countdownMinuteFunkyFuture">%d</string>
    <string name="countdownMinutePluralFuture">%d minutes until bedtime</string>
    <string name="countdownMinuteSingularPast">%d minute past bedtime</string>
    <string name="countdownMinuteFunkyPast">%d</string>
    <string name="countdownMinutePluralPast">%d minutes past bedtime</string>
    <string name="settingsAdsDisabledSummary">Ads are disabled, thank you for your support.</string>
    <string name="settingsAdvancedPurchasedSummary">Thank you for supporting me!</string>
    <string name="settingsConsentPrefsClearedToast">Consent preferences cleared… Go back to main screen to edit</string>
    <string name="settingsBedtimeSummary">Bedtime is %s</string>
    <string name="settingsSmartNotificationsSummaryEnabled">Send notifications until you stop using your phone</string>
    <string name="settingsAutoDnDSummarySingular">Automatically enable Do not Disturb 1 minute after the last bedtime reminder is sent</string>
    <string name="settingsDelayDnDSummarySingular">Do not Disturb will be activated 1 minute after the last notification is sent</string>
    <string name="settingsDelayDnDSummaryFunky">%s</string>
    <string name="settingsAutoDnDSummaryFunky">%s</string>
    <string name="settingsDelayDnDSummaryPlural">Do not disturb will be activated %s minutes after the last notification is sent</string>
    <string name="settingsAutoDnDSummaryPlural">Automatically enable do not disturb %s minutes after the last bedtime reminder is sent</string>
    <string name="settingsAutoDnDLowAndroidVersonMessage">Android 6.0 (Marshmallow) and up required</string>
    <string name="settingsAutoDnD_LG_G4_message">LG G4 is not compatible (LG didn\'t implement the API correctly)</string>
    <string name="settingsNotificationDelaySummary">%s minute delay between sleep notifications</string>
    <string name="settingsNotificationAmountSingular">1 sleep reminder will be sent</string>
    <string name="settingsNotificationAmountFunky">%s</string>
    <string name="settingsNotificationAmountPlural">%s sleep reminders will be sent</string>
    <string name="settingsInactivityTimerSummarySingular">User must be inactive for 1 minute to be considered inactive</string>
    <string name="settingsInactivityTimerSummaryFunky">%s</string>
    <string name="settingsInactivityTimerSummaryPlural">User must be inactive for %s minutes to be considered inactive</string>
    <string name="settingsAdsEnabledSummary">Unlock advanced options without paying by showing ads (ads will never be shown outside of the app)</string>
    <string name="settingsAdvancedPurchaseSummary">Support me and unlock all advanced options without advertisements for life</string>
    <string name="settingsDnDPermDeniedToast">Do not disturb access not granted, toggle option to try again</string>
    <string name="settingsUsagePermDeniedToast">Usage access not granted, toggle option to try again</string>
    <string name="rateDialogTitle">Enjoying Go to Sleep?</string>
    <string name="categoryGeneral">General</string>
    <string name="bedtimeSummary">Edit your bedtime</string>
    <string name="bedtimeSummaryHasTime">Bedtime is %s</string>
    <string name="bedtimeTitle">Bedtime</string>
    <string name="autoDoNotDisturbTitle">Automatic Do Not Disturb</string>
    <string name="autoDoNotDisturbSummary">Automatically enable Do not Disturb 2 minutes after the last bedtime reminder is sent</string>
    <string name="tapToHideTitle">Tap to Hide</string>
    <string name="tapToHideSummary">Tap anywhere on the main screen to hide the settings and about button</string>
    <string name="categoryNotifications">Notifications</string>
    <string name="notificationToggleTitle">Enable Notifications</string>
    <string name="notificationToggleSummary">Enable/disable sleep reminder notifications</string>
    <string name="notificationDelayTitle">Notification Interval</string>
    <string name="notificationDelaySummary">15 minute interval between sleep notifications</string>
    <string name="notificationAmountTitle">Notification Amount</string>
    <string name="categoryAdvanced">Advanced Options</string>
    <string name="advancedPurchaseTitle">Unlock Advanced Options Ad-Free</string>
    <string name="advancedPurchaseSummary">Support me and unlock all advanced options without advertisements for life</string>
    <string name="gdprTitle">Clear GDPR preferences</string>
    <string name="gdprSummary">Clear your preferences regarding ad personalization</string>
    <string name="smartNotificationsTitle">Smart Notifications</string>
    <string name="smartNotificationsSummary">Send notifications until you stop using your phone</string>
    <string name="activityMarginTitle">Inactivity Timer</string>
    <string name="activityMarginSummary">User must be inactive for 5 minutes to be counted as inactive</string>
    <string name="dndDelayTitle">Automatic Do Not Disturb Timer</string>
    <string name="dndDelaySummary">Do not Disturb will be activated 2 minutes after the last notification is sent</string>
    <string name="categoryCustomNotificationsTitle">Custom Notifications</string>
    <string name="categoryCustomNotificationsSummary">Customize your sleep notifications</string>
    <string name="enableAdsTitle">Enable Advertisements</string>
    <string name="enableAdsSummary">Unlock advanced options without paying by showing ads (ads will never be shown outside of the app) </string>
    <string name="SettingsNotificationSoundsTitle">Enable Notification Sounds</string>
    <string name="SettingsNotificationSoundsSummary">Make sound when a notification is shown</string>
    <string name="settingsNotificationChannelSummary">More control over notifications from this app</string>
    <string name="settingsNotificationChannelTitle">Additional Notification Settings</string>
    <string name="minNotificationsTitle">Always Send a Notification</string>
</resources>