<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ethereumTextView"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/product_sans_regular"
        android:lineSpacingExtra="8dp"
        android:text="@string/ethereum"
        android:textColor="@color/accentPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googlePayTextView"

        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"/>

    <TextView
        android:id="@+id/googlePayTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/product_sans_regular"
        android:lineSpacingExtra="8dp"
        android:text="@string/google_pay"
        android:textAlignment="viewStart"
        android:textColor="@color/accentPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payPalTextView"

        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/donate5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/moonPrimary"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/dollar_5"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/donate3"
        app:layout_constraintTop_toTopOf="@+id/donate3"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/donate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/moonPrimary"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/dollar_3"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateDescTextView"/>

    <TextView
        android:id="@+id/donateDescTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/product_sans_regular"
        android:lineSpacingExtra="8dp"
        android:text="@string/donate_desc"
        android:textAlignment="center"
        android:textColor="@color/accentPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/donate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/moonPrimary"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/dollar_1"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/donate3"
        app:layout_constraintTop_toTopOf="@+id/donate3"/>

    <TextView
        android:id="@+id/payPalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/product_sans_regular"
        android:lineSpacingExtra="8dp"
        android:text="@string/paypal"
        android:textColor="@color/accentPrimary"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate1"

        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"/>

</androidx.constraintlayout.widget.ConstraintLayout>